--- a/Methods_Models.tex
+++ b/Methods_Models.tex
@@ -110,7 +110,7 @@ The single-stream blocks (see fig. \ref{SingleDoubleStreamBlock} on the left) ar
 \begin{table}[h]
 	\centering
 	\caption{Number of parameters for the individual components of double-stream block from Flux-dev.}
-	\label{Flux_parameter_count}
+	\label{tab:Flux_parameter_count}
 	\renewcommand{\arraystretch}{1.2} % Macht die Tabelle etwas luftiger/lesbarer
 	\begin{tabular}{@{}l c@{}} % @{} entfernt den seitlichen Rand für einen cleanen Look
 		\toprule
