--- a/bibliography.bib
+++ b/bibliography.bib
@@ -92,6 +92,26 @@
 	year={2025}
 }
 
+@software{kohya_ss_sd_scripts_2024,
+	author       = {kohya-ss},
+	title        = {sd-scripts},
+	month        = oct,
+	year         = 2024,
+	publisher    = {GitHub},
+	journal      = {GitHub repository},
+	howpublished = {\url{https://github.com/kohya-ss/sd-scripts}},
+}
+
+@misc{pixartsigma_code,
+	author = {Chen, Junsong and Ge, Chongjian and Xie, Enze and others},
+	title = {PixArt-sigma: Official PyTorch Implementation},
+	year = {2024},
+	publisher = {GitHub},
+	journal = {GitHub repository},
+	howpublished = {\url{https://github.com/PixArt-alpha/PixArt-sigma}},
+	commit = {INSERT_COMMIT_HASH_HERE} % Optional: Falls Sie eine spezifische Version genutzt haben
+}
+
 @article{dong2025attention,
 	title={Attention Retrieves, MLP Memorizes: Disentangling Trainable Components in the Transformer},
 	author={Dong, Yihe and Noci, Lorenzo and Khodak, Mikhail and Li, Mufan},
