--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,8 @@
 
 
 \include{Methods_Experiments}
-\include{Experiments}
+\include{Experiments_Pixart}
+\include{Experiments_Flux}
 \include{conclusion}
 \include{Appendix}
 \bibliographystyle{plainurl}        % or apalike, unsrt, etc.
