--- a/bibliography.bib
+++ b/bibliography.bib
@@ -92,6 +92,16 @@
 	year={2025}
 }
 
+@misc{EcoDiff,
+	title={Learnable Sparsity for Vision Generative Models}, 
+	author={Yang Zhang and Er Jin and Wenzhong Liang and Yanfei Dong and Ashkan Khakzar and Philip Torr and Johannes Stegmaier and Kenji Kawaguchi},
+	year={2025},
+	eprint={2412.02852},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV},
+	url={https://arxiv.org/abs/2412.02852}, 
+}
+
 @software{kohya_ss_sd_scripts_2024,
 	author       = {kohya-ss},
 	title        = {sd-scripts},
